wwr/styles/rafting.css
:root {
    --primary-color: #055a05;
    --secondary-color: #f4a261;
    --accent1-color: #264653;
    --accent2-color: #e9c46a;
    --heading-font: Arial, Helvetica, sans-serif;
    --body-font: Times New Roman, Georgia, serif;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--body-font);
    color: var(--accent1-color);
}

header,
main,
footer {
    width: 840px;
    margin: 0 auto;
}

header {
    background-color: var(--primary-color);
    color: var(--accent2-color);
    display: grid;
    grid-template-columns: 175px 1fr;
}

header img {
    width: 150px;
    height: auto;
}

.navigation {
    display: flex;
    list-style: none;

}

.navigation li {
    flex: 1 1 auto;

}

h1,
h2 {
    font-family: var(--heading-font);
    color: var(--primary-color);
}

h1 {
    position: absolute;
    top: 20px;
    width: 100%;
    padding: 16px;
    text-align: center;
    opacity: 0.7;
    background-color: var(--accent1-color);
    color: #fff;
}

h2 {
    background-color: var(--secondary-color);
    color: var(--accent1-color);
    text-align: center;
}

nav,
p,
section,
article {
    margin: 16px;
    padding: 8px;

}

.socialmedia a {
    text-decoration: none;
}

.hero {
    position: relative;
}

.hero img {
    display: block;
    width: 100%;
    height: auto;
}

.hero article {
    position: absolute;
    bottom: 1px;
    text-align: center;
    width: 90%;
    opacity: .8;
    padding: 10px;
    background-color: var(--primary-color);
    color: var(--accent2-color);
    margin-left: 40px;

}

.hero article img {
    float: right;
    width: 125px;
    border: 5px black;
}

.history {
    display: grid;
    grid-template-columns: 1fr 0.5fr 1fr;
    justify-items: center;
}

.history img {
    width: 125px;
    height: auto;
    margin-top: 25px;
}

.adventure {
    display: flex;
    justify-content: space-around;
}

.adventure img {
    width: 125px;
    height: auto;
}

footer {
    display: grid;
    grid-template-columns: 1fr 0.25fr;
    place-items: center;

}

.socialmedia {
    display: flex;
    justify-content: space-around;
}

